<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="neagucristian.bookbunker.EntryFragment"
    android:id="@+id/entry_fragment"
    android:layout_marginTop="48dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="neagucristian.bookbunker.EntryActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/entry_authorView"
                android:id="@+id/authorView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/entry_authorEdit"
                android:hint="@string/entry_authorHint"
                android:layout_below="@+id/authorView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:maxLines="1"
                android:maxLength="32"
                android:textAlignment="center"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:fontFamily="sans-serif-thin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/entry_titleView"
                android:id="@+id/entry_titleView"
                android:layout_below="@+id/entry_authorEdit"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/entry_titleEdit"
                android:layout_below="@+id/entry_titleView"
                android:layout_alignRight="@+id/entry_authorEdit"
                android:layout_alignEnd="@+id/entry_authorEdit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:maxLines="1"
                android:maxLength="32"
                android:hint="@string/entry_titleHint"
                android:textAlignment="center"
                android:singleLine="true"
                android:inputType="textCapSentences"
                android:fontFamily="sans-serif-thin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/entry_commentView"
                android:id="@+id/entry_commentView"
                android:layout_below="@+id/entry_titleEdit"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-thin"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:ems="10"
                android:id="@+id/entry_commentEdit"
                android:layout_below="@+id/entry_commentView"
                android:layout_alignRight="@+id/entry_titleEdit"
                android:layout_alignEnd="@+id/entry_titleEdit"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/entry_commentHint"
                android:maxLines="5"
                android:maxLength="500"
                android:textAlignment="center"
                android:fontFamily="sans-serif-thin"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:numStars="5"
                android:outlineProvider="bounds"
                android:nestedScrollingEnabled="true"
                android:stepSize="1"
                android:layout_below="@+id/entry_takePhoto"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_addButton"
                android:id="@+id/entry_addButton"
                android:layout_below="@+id/ratingBar"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:fontFamily="sans-serif-thin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_clearButton"
                android:id="@+id/entry_clearButton"
                android:layout_below="@+id/ratingBar"
                android:fontFamily="sans-serif-thin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_takePhoto"
                android:fontFamily="sans-serif-thin"
                android:id="@+id/entry_takePhoto"
                android:layout_below="@+id/entry_commentEdit"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>
