<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="neagucristian.bookbunker.HomeFragment"
    android:layout_marginTop="48dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16pt"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/home_welcome"
            android:id="@+id/home_welcome"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
            android:fontFamily="sans-serif-thin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="#4B4B4B"
            android:text="@string/home_countText1"
            android:id="@+id/home_countText1"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/home_welcome"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="#4B4B4B"
            android:text="###"
            android:id="@+id/home_countNumber"
            android:layout_below="@+id/home_countText1"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:textAlignment="center"
            android:textColor="#4B4B4B"
            android:text="@string/home_countText2"
            android:id="@+id/home_countText2"
            android:layout_below="@+id/home_countNumber"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"
            />
    </RelativeLayout>
    </ScrollView>
</FrameLayout>
